# portable-gpu-programming

./: .gitignore  Exercises_Instructions.md  README.md  README_setup.md  about.yml  exercises-instructions.md
.github/workflows/: pages-html.yml  pages-pdf.yml  pages.yml
docs/: 01-introduction.md  01-parallel-programming.md
docs/intro-day/: 01-parallel-programming.md
intro-day/: README.md  about.yml
intro-day/demos/: lambdas.cpp  pointers.cpp
intro-day/docs/: 01-parallel-programming.md  02-gpu-computing.md  02-gpus-computing.md  03-gpu-execution-model.md  04-memory-access-hierarchy.md  05-computing-platforms.md  06-pointers-cpp.md  07-mpi.md  message-passing-game.md
intro-day/gpu-performance-analysis/: README.md
intro-day/mpi-hello/: README.md  hello.F90  hello.cpp  job_lumi.sh  job_mahti.sh
intro-day/mpi-message-exchange/: README.md  exchange.cpp
intro-day/using-modules/: README.md  helper_functions.h  poisson.c
intro-day/using-slurm/: README.md  job_lumi.sh  job_mahti.sh
jupyter_setup/: README.md  plotting-resources.yml  plotting.lua
kokkos/: README.md  about.yml  common.cmake  installing-using.md
kokkos/00-hello/: CMakeLists.txt  README.md  hello.cpp
kokkos/01-parallel-axpy/: README.md  axpy.cpp
kokkos/01-simple-axpy/: CMakeLists.txt  README.md  axpy.cpp
kokkos/01-simple-axpy/solution/: CMakeLists.txt  axpy-functor.cpp  axpy-lambda-sharedspace.cpp  axpy-lambda.cpp  axpy-sharedspace.cpp  axpy.cpp
kokkos/02-parallel-dot-product/: CMakeLists.txt  README.md
kokkos/02-simple-dot-product/: README.md  dot-product.cpp
kokkos/02-simple-dot-product/solution/: CMakeLists.txt  dot-product.cpp
kokkos/03-views/: CMakeLists.txt  README.md  views.cpp
kokkos/04-axpy-view/: README.md
kokkos/04-axpy-view/solution/: CMakeLists.txt  axpy-functor-shared.cpp  axpy-functor.cpp  axpy-shared.cpp  axpy.cpp
kokkos/05-subviews/: CMakeLists.txt  README.md  subviews.cpp
kokkos/05-subviews/solution/: CMakeLists.txt  subviews.cpp
kokkos/06-poisson/: CMakeLists.txt  README.md  poisson.cpp
kokkos/07-mpi-hello/: CMakeLists.txt  README.md  hello.cpp
kokkos/08-mpi-message-exchange/: README.md  exchange.cpp
kokkos/09-matrix-product/: CMakeLists.txt  README.md
kokkos/10-heat-equation/: README.md
kokkos/axpy-view/: README.md
kokkos/axpy/solution/: CMakeLists.txt  axpy.cpp
kokkos/docs/: 01-introduction-kokkos.md  02-simple-parallelism.md  03-views-spaces.md  04-memory-layout-mdrange.md  05-interoperability-kernels-tools.md  Makefile
kokkos/hello/: CMakeLists.txt
kokkos/matrix-product/: README.md
kokkos/mpi-hello/: CMakeLists.txt  README.md
kokkos/poisson/: CMakeLists.txt  poisson.cpp
kokkos/simple-axpy/: CMakeLists.txt
kokkos/simple-axpy/solution/: CMakeLists.txt  axpy-lambda.cpp  axpy.cpp
kokkos/simple-dot-product/: CMakeLists.txt  README.md
openmp/: README.md  about.yml  compare.py  helper_functions.F90  helper_functions.h
openmp/01-axpy/: README.md  axpy.F90
openmp/01-axpy-basics/: README.md  axpy.F90  axpy.c  print_array.h
openmp/02-axpy-dynamic/: README.md  axpy.F90  axpy.c
sycl/: about.yml
(+208 files in other folders)
